# harper

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: har.rs  main.rs
src/ops/: blocklist.rs  count_requests.rs  count_schemes.rs  count_urls.rs  dns.rs  filter.rs  list_domains.rs  mod.rs  search_for.rs
