[package]
name = "harper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", default-features = false }
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.40", features = ["clock"], default-features = false }
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
env_logger = { version = "0.11.7", features = ["humantime", "regex"], default-features = false }
json = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hickory-resolver = { version = "0.25.1", features = ["dnssec-ring"] }
tldextract = "0.6.0"
url = "2.5.4"
tokio = { version = "1.44.1", features = ["fs", "macros"] }
reqwest = "0.12.15"
directories = "6.0.0"
indicatif = "0.17.11"
