[package]
name = "harper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", default-features = false }
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.40", features = ["clock"], default-features = false }
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
env_logger = { version = "0.11.7", default-features = false }
json = "0.12.4"
serde = { version = "1.0.219", features = ["serde_derive"], default-features = false }
serde_json = "1.0.140"
hickory-resolver = "0.25.1"
tldextract = "0.6.0"
url = { version = "2.5.4", default-features = false }
tokio = { version = "1.44.1", features = ["fs"] }
reqwest = { version = "0.12.15", features = ["default-tls"], default-features = false }
directories = "6.0.0"
indicatif = { version = "0.17.11", default-features = false }
