[package]
name = "harper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.44", features = ["clock"], default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
env_logger = { version = "0.11.10", default-features = false }
json = "0.12.4"
serde = { version = "1.0.228", features = ["serde_derive"], default-features = false }
serde_json = "1.0.149"
hickory-resolver = "0.25.2"
tldextract = "0.6.0"
url = { version = "2.5.8", default-features = false }
tokio = { version = "1.50.0", features = ["fs"] }
reqwest = { version = "0.12.28", features = ["default-tls"], default-features = false }
directories = "6.0.0"
indicatif = { version = "0.18.4", default-features = false }
